--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-plugin-wildcard": "^6.0.0",
     "core-js": "^3.6.4",
     "vue": "^2.6.11"
   },
