--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bulma": "^0.9.2",
     "core-js": "^3.6.4",
     "vue": "^2.6.11"
   },
@@ -16,7 +17,7 @@
     "@vue/cli-plugin-eslint": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
     "babel-eslint": "^10.0.3",
-    "buefy": "^0.8.12",
+    "buefy": "^0.9.7",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
     "lodash": "^4.17.21",
